--- a/frontend/src/app/components/Spinner/styles.module.css
+++ b/frontend/src/app/components/Spinner/styles.module.css
@@ -7,14 +7,15 @@
   height: 10em;
 }
 .loader {
-  margin: 60px auto;
   font-size: 10px;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #ffffff;
+  border-top: 1.1em solid #e0e2ea;
+  border-right: 1.1em solid #e0e2ea;
+  border-bottom: 1.1em solid #e0e2ea;
+  border-left: 1.1em solid #4460f7;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
